package factory.machine;
import furniture.FurnitureType;
import materials.MaterialType;

public interface PopOut {
    public MaterialType.Plastic.Condition popOut(MaterialType.Plastic.Condition  condition);
}
